--- a/src/report/report.html
+++ b/src/report/report.html
@@ -44,18 +44,18 @@
 	<hr/>
 
 	<div class="navItem">
-		<h4>Period</h4>
-		<label ng-if="rCtrl.selectedReport.id === 'rim'">Year</label>
+		<h4>{{ 'Period' || i18next }}</h4>
+		<label ng-if="rCtrl.selectedReport.id === 'rim'">{{ 'Year' | i18next }}</label>
 		<d2-select options="rCtrl.periods" ng-model="rCtrl.selectedPeriod" placeholder="Select year..."></d2-select>
 		<div class="btn-group btn-group-justified"
 			 style="margin-bottom: 5px;"
 			 ng-init="rCtrl.aggregationType='cumulative';"
 			 ng-if="rCtrl.selectedReport.id === 'vac'">
-			<label class="btn btn-success" ng-model="rCtrl.aggregationType" uib-btn-radio="'cumulative'" uncheckable>Cumulative</label>
-			<label class="btn btn-success" ng-model="rCtrl.aggregationType" uib-btn-radio="'monthly'" uncheckable>Monthly</label>
+			<label class="btn btn-success" ng-model="rCtrl.aggregationType" uib-btn-radio="'cumulative'" uncheckable>{{ 'Cumulative' | i18next }}</label>
+			<label class="btn btn-success" ng-model="rCtrl.aggregationType" uib-btn-radio="'monthly'" uncheckable>{{ 'Monthly' || i18next }}</label>
 		</div>
 		<div ng-if="rCtrl.selectedReport.id === 'mon' && rCtrl.selectedMonitoringReport.id != 'allVac'">
-			<label>Previous years for comparison</label>
+			<label>{{ 'Previous years for comparison' || i18next }}</label>
 			<input ng-init="rCtrl.selectedReferencePeriods = 3"
 				   ng-model="rCtrl.selectedReferencePeriods"
 				   type="number"
@@ -64,7 +64,7 @@
 				   class="form-control">
 		</div>
 		<div ng-if="rCtrl.selectedReport.id === 'rim'">
-			<label>Month</label>
+			<label>{{ 'Month' | i18next }}</label>
 			<d2-select ng-model="rCtrl.selectedMonth" options="rCtrl.months" placeholder="Select month..."></d2-select>
 		</div>
 	</div>
@@ -101,34 +101,34 @@
 			<div ng-if="rCtrl.adm.i" style="margin: 10px">
 				<table class="table table-bordered" style="width: 600px;">
 					<tr>
-						<th>Name</th>
+						<th>{{ 'Name' | i18next }}</th>
 						<td><input class="form-control" ng-model="rCtrl.adm.i.displayName"></td>
 					</tr><tr>
-					<th>Vaccine (total)</th>
+					<th>{{ 'Vaccine (total)' | i18next }}</th>
 					<td>
 						<div class="btn-group btn-group-justified" style="margin-bottom: 5px;" ng-init="rCtrl.adm.i.typeA='de';">
-							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeA" uib-btn-radio="'de'" uncheckable>Data element</label>
-							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeA" uib-btn-radio="'in'" uncheckable>Indicator</label>
+							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeA" uib-btn-radio="'de'" uncheckable>{{ 'Data element' || i18next }}</label>
+							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeA" uib-btn-radio="'in'" uncheckable>{{ 'Indicator' | i18next }}</label>
 						</div>
 						<d2-select-data-element ng-if="rCtrl.adm.i.typeA === 'de'" ng-model="rCtrl.adm.i.vaccineAll"></d2-select-data-element>
 						<d2-select-indicator ng-if="rCtrl.adm.i.typeA === 'in'" ng-model="rCtrl.adm.i.vaccineAll"></d2-select-indicator>
 					</td>
 				</tr><tr>
-					<th>Vaccine (target age)</th>
+					<th>{{ 'Vaccine (target age)' | i18next}}</th>
 					<td>
 						<div class="btn-group btn-group-justified" style="margin-bottom: 5px;" ng-init="rCtrl.adm.i.typeT='de';">
-							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeT" uib-btn-radio="'de'" uncheckable>Data element</label>
-							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeT" uib-btn-radio="'in'" uncheckable>Indicator</label>
+							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeT" uib-btn-radio="'de'" uncheckable>{{ 'Data element' || i18next }}</label>
+							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeT" uib-btn-radio="'in'" uncheckable>{{ 'Indicator' | i18next }}</label>
 						</div>
 						<d2-select-data-element ng-if="rCtrl.adm.i.typeT === 'de'" ng-model="rCtrl.adm.i.vaccineTarget"></d2-select-data-element>
 						<d2-select-indicator ng-if="rCtrl.adm.i.typeT === 'in'" ng-model="rCtrl.adm.i.vaccineTarget"></d2-select-indicator>
 					</td>
 				</tr><tr>
-					<th>Denominator</th>
+					<th>{{ 'Denominator' | i18next }}</th>
 					<td>
 						<div class="btn-group btn-group-justified" style="margin-bottom: 5px;" ng-init="rCtrl.adm.i.typeD='de';">
-							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeD" uib-btn-radio="'de'" uncheckable>Data element</label>
-							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeD" uib-btn-radio="'in'" uncheckable>Indicator</label>
+							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeD" uib-btn-radio="'de'" uncheckable>{{ 'Data element' | i18next }}</label>
+							<label class="btn btn-success" ng-model="rCtrl.adm.i.typeD" uib-btn-radio="'in'" uncheckable>{{ 'Indicator' | i18next }}</label>
 						</div>
 						<d2-select-data-element ng-if="rCtrl.adm.i.typeD === 'de'" ng-model="rCtrl.adm.i.denominator"></d2-select-data-element>
 						<d2-select-indicator ng-if="rCtrl.adm.i.typeD === 'in'" ng-model="rCtrl.adm.i.denominator"></d2-select-indicator>
@@ -138,16 +138,16 @@
 				</table>
 				<button class="btn btn-danger" ng-click="rCtrl.adm.i = null">Cancel</button>
 				<button class="btn btn-success" ng-click="rCtrl.adm.indicatorSave(rCtrl.adm.i)"
-						ng-disabled="!rCtrl.adm.i.displayName || !rCtrl.adm.i.vaccineAll || !rCtrl.adm.i.vaccineTarget || !rCtrl.adm.i.denominator">Save</button>
+						ng-disabled="!rCtrl.adm.i.displayName || !rCtrl.adm.i.vaccineAll || !rCtrl.adm.i.vaccineTarget || !rCtrl.adm.i.denominator">{{ 'Save' | i18next }}</button>
 			</div>
 
 
 			<table class="table table-bordered" ng-if="!rCtrl.adm.i" style="margin: 10px">
 				<tr>
-					<th>Name</th>
-					<th>Vaccine (total)</th>
-					<th>Vaccine (target age)</th>
-					<th>Denominator</th>
+					<th>{{ 'Name' | i18next }}</th>
+					<th>{{ 'Vaccine (total)' | i18next }}</th>
+					<th>{{ 'Vaccine (target age)' | i18next }}</th>
+					<th>{{ 'Denominator' | i18next }}</th>
 					<th></th>
 				</tr>
 				<tr ng-repeat="vac in rCtrl.adm.indicators()">
@@ -158,16 +158,16 @@
 					<td>
 						<button class="btn btn-small btn-info"
 								ng-click="rCtrl.adm.i = vac">
-							Edit
+							{{ 'Edit' | i18next }}
 						</button>
 						<button ng-disabled="vac.code === 'I2' || vac.code === 'I4'" class="btn btn-small btn-danger"
 								ng-click="rCtrl.adm.indicatorDelete(vac.code)">
-							Delete
+							{{ 'Delete' | i18next }}
 						</button>
 					</td>
 				</tr>
 			</table>
-			<button class="btn btn-success" ng-if="!rCtrl.adm.i" ng-click="rCtrl.adm.i = {code: null}" style="float: right">Add</button>
+			<button class="btn btn-success" ng-if="!rCtrl.adm.i" ng-click="rCtrl.adm.i = {code: null}" style="float: right">{{ 'Add' | i18next }}</button>
 		</uib-tab>
 	
 		<!--Currently disabled-->
@@ -175,30 +175,30 @@
 			<div ng-if="rCtrl.adm.d" style="margin: 10px">
 				<table class="table table-bordered" style="width: 600px;">
 					<tr>
-						<th>Name</th>
+						<th>{{ 'Name' | i18next }}</th>
 						<td><input class="form-control" ng-model="rCtrl.adm.d.displayName"></td>
 					</tr><tr>
-					<th>Vaccine from</th>
+					<th>{{ 'Vaccine from' | i18next }}</th>
 					<td>
 						<d2-select ng-model="rCtrl.adm.d.vaccineFrom" options="rCtrl.adm.indicators()"></d2-select>
 					</td>
 				</tr><tr>
-					<th>Vaccine to</th>
+					<th>{{ 'Vaccine to' | i18next }}</th>
 					<td>
 						<d2-select ng-model="rCtrl.adm.d.vaccineTo" options="rCtrl.adm.indicators()"></d2-select>
 					</td>
 				</tr>
 
 				</table>
-				<button class="btn btn-danger" ng-click="rCtrl.adm.d = null">Cancel</button>
-				<button class="btn btn-success" ng-click="rCtrl.adm.dropoutSave(rCtrl.adm.d)">Save</button>
+				<button class="btn btn-danger" ng-click="rCtrl.adm.d = null">{{ 'Cancel' | i18next }}</button>
+				<button class="btn btn-success" ng-click="rCtrl.adm.dropoutSave(rCtrl.adm.d)">{{ 'Save' | i18next }}</button>
 			</div>
 
 			<table class="table table-bordered" ng-if="!rCtrl.adm.d" style="margin: 10px">
 				<tr>
-					<th>Name</th>
-					<th>Vaccine from</th>
-					<th>Vaccine to</th>
+					<th>{{ 'Name' | i18next }}</th>
+					<th>{{ 'Vaccine from' | i18next }}</th>
+					<th>{{ 'Vaccine to' | i18next }}</th>
 					<th></th>
 				</tr>
 				<tr ng-repeat="do in rCtrl.adm.dropouts()">
@@ -208,16 +208,16 @@
 					<td>
 						<button class="btn btn-small btn-info"
 								ng-click="rCtrl.adm.d = do">
-							Edit
+							{{ 'Edit' | i18next }}
 						</button>
 						<button class="btn btn-small btn-danger"
 								ng-click="rCtrl.adm.dropoutDelete(do.code)">
-							Delete
+							{{ 'Delete' | i18next }}
 						</button>
 					</td>
 				</tr>
 			</table>
-			<button class="btn btn-success" ng-if="!rCtrl.adm.d" ng-click="rCtrl.adm.d = {code: null}" style="float: right">Add</button>
+			<button class="btn btn-success" ng-if="!rCtrl.adm.d" ng-click="rCtrl.adm.d = {code: null}" style="float: right">{{ 'Add' | i18next }}</button>
 		</uib-tab>
 		
 		<!--Currently disabled, hardcoded to DPT-->
@@ -227,24 +227,24 @@
 				   style="margin: 10px; width: 600px;"
 				   ng-init="rCtrl.adm.p = rCtrl.adm.performance()[0]">
 				<tr>
-					<th>Name</th>
+					<th>{{ 'Name' | i18next }}</th>
 					<td><input class="form-control" ng-model="rCtrl.adm.p.displayName"></td>
 				</tr>
 				<tr>
-					<th>Indicator (coverage)</th>
+					<th>{{ 'Indicator (coverage)' | i18next }}</th>
 					<td>
 						<d2-select options="rCtrl.adm.indicators()" ng-model="rCtrl.adm.p.indicator"></d2-select>
 					</td>
 				</tr>
 				<tr>
-					<th>Dropout rate</th>
+					<th>{{ 'Dropout rate' | i18next }}</th>
 					<td>
 						<d2-select options="rCtrl.adm.dropouts()" ng-model="rCtrl.adm.p.dropout"></d2-select>
 					</td>
 				</tr>
 				<tr>
 					<th colspan="2">
-						<button class="button btn btn-success" ng-click="rCtrl.adm.performanceSave(rCtrl.adm.p)">Save</button>
+						<button class="button btn btn-success" ng-click="rCtrl.adm.performanceSave(rCtrl.adm.p)">{{ 'Save' | i18next }}</button>
 					</th>
 
 				</tr>
@@ -255,15 +255,18 @@
 		<uib-tab index="3" heading="RIM configuration" ng-click="rCtrl.rimConfig()">
 
 			<div style="width: 800px">
-				<h2>RIM export configuration</h2>
+				<h2>{{ 'RIM export configuration' | i18next }}</h2>
 
-				<p><em>Configuration</em> is used for changing general export parameters (existing parameters will be
-					overwritten). <em>Import</em> is used for the initial import of RIM metadata only.</p>
+				<ul>
+					<li>{{ 'Configuration: used for changing general export parameters (existing parameters will be
+					overwritten)' | i18next }}.</li>
+					<li>{{ 'Import: used for the initial import of RIM metadata only.' | i18next }}</li>
+				</ul>
 
-				<h3>Configuration</h3>
-				<label>Organisation unit levels</label>
-				<p>RIM export is done by district (admin 2) level, and also includes the province (admin 1) level and a
-					country code. Please enter country code and select province, district levels here:</p>
+				<h3>{{ 'Configuration' | i18next }}</h3>
+				<label>{{ 'Organisation unit levels' | i18next }}</label>
+				<p>{{ 'RIM export is done by district (admin 2) level, and also includes the province (admin 1) level and a
+					country code. Please enter country code and select province, district levels here:' | i18next }}</p>
 				<div style="width: 400px">
 					<span>{{ 'Country code:' || i18next }}<input style="width: 100px; margin-bottom: 5px;" type="text" ng-model="rCtrl.rim.countryCode"></span>
 					<d2-select placeholder="Select province level..."
@@ -276,8 +279,8 @@
 
 				<br />
 
-				<label>Completeness</label>
-				<p>Select the EPI data set/reporting form to use for reporting on completeness:</p>
+				<label>{{ 'Completeness' | i18next }}</label>
+				<p>{{ 'Select the EPI data set/reporting form to use for reporting on completeness:' | i18next }}</p>
 				<div style="width: 400px">
 					<d2-select placeholder="Select dataset..."
 							   options="rCtrl.rim.options.dataSets" ng-model="rCtrl.rim.dataset"
@@ -286,47 +289,47 @@
 				</div>
 				<button style="float: right; margin-top: 20px; margin-bottom: 20px;" class="btn btn-danger" ng-click="rCtrl.rimUpdate()"
 						ng-disabled="!rCtrl.rim.dataset || !rCtrl.rim.districtLevel || !rCtrl.rim.provinceLevel || !rCtrl.rim.countryCode">
-					Update configuration
+					{{ 'Update configuration' | i18next }}
 				</button>
 
 				<hr style="width: 100%; margin-top: 20px"/>
 
-				<h3>Import settings</h3>
+				<h3>{{ 'Import settings' | i18next }}</h3>
 				<p>
-					RIM export relies on configuration of a set of DHIS 2 indicators. This page is used for selecting the relevant
+					{{ 'RIM export relies on configuration of a set of DHIS 2 indicators. This page is used for selecting the relevant
 					indicators and importing them into the DHIS 2. Administrators must then configure the indicator formulas
-					to map each indicator to the appropriate data elements.
+					to map each indicator to the appropriate data elements.' | i18next }}
 				</p>
 
 				<p>
-					Indicators will be added to an indicator group called RIM Export, and the indicators will have [RIM] as prefix.
+					{{ 'Indicators will be added to an indicator group called RIM Export, and the indicators will have [RIM] as prefix.' | i18next }}
 				</p>
 
 				<p>
-					A new user group will be imported with the current users as member, and the RIM indicators will be visible
+					{{ 'A new user group will be imported with the current users as member, and the RIM indicators will be visible
 					only to user in that group. Only users in this group can thus configure the RIM indicators, and export
-					data in RIM format. Additional users can be added to this group in the DHIS 2 user management app.
+					data in RIM format. Additional users can be added to this group in the DHIS 2 user management app.' | i18next }}
 				</p>
 
 				<br/>
 
-				<label>Stock</label>
-				<p>Is information on stock (doses available and doses used) available?
+				<label>{{ 'Stock' | i18next }}</label>
+				<p>{{ 'Is information on stock (doses available and doses used) available?' | i18next }}
 					<input type="checkbox" ng-model="rCtrl.rim.stock"></p>
 
 				<br />
 
-				<label>AEFI</label>
-				<p>Is information on AEFIs <em>by vaccine</em> available?
+				<label>{{ 'AEFI' | i18next }}</label>
+				<p>{{ 'Is information on AEFIs <em>by vaccine</em> available?' | i18next }}
 					<input type="checkbox" ng-model="rCtrl.rim.aefi"></p>
 
 				<br />
-				<label>Vaccine disaggregation</label>
-				<p>Is vaccination data disaggregated by static/outreach, or static/outreach/mobile?
+				<label>{{ 'Vaccine disaggregation' | i18next }}</label>
+				<p>{{ 'Is vaccination data disaggregated by static/outreach, or static/outreach/mobile?' | i18next }}
 					<input type="checkbox" ng-model="rCtrl.rim.outreach"></p>
 
 				<br />
-				<label>Vaccines</label>
+				<label>{{ 'Vaccines' | i18next }}</label>
 				<table class="table table-bordered"
 					   ng-if="!rCtrl.adm.d"
 					   style="width: 800px;">
@@ -336,12 +339,12 @@
 					</tr>
 				</table>
 
-				<p>Overwrite previously imported RIM indicators?
+				<p>{{ 'Overwrite previously imported RIM indicators?' | i18next }}
 					<input type="checkbox" ng-model="rCtrl.rim.overwrite"></p>
 
 				<button ng-disabled="!rCtrl.rim.dataset || !rCtrl.rim.districtLevel || !rCtrl.rim.provinceLevel || !rCtrl.rim.countryCode"
 						style="float: right; margin-top: 20px; margin-bottom: 20px;" class="btn btn-danger" ng-click="rCtrl.rimImport()">
-					Import RIM metadata and update configuration
+					{{ 'Import RIM metadata and update configuration' | i18next }}
 				</button>
 			</div>
 
@@ -359,7 +362,7 @@
 	<!--VACCINATIONS-->
 	<div ng-if="rCtrl.current.type === 'vac'" class="reportContent">
 
-	<button class="btn btn-success" style="float: right; margin-bottom: 10px;" ng-click="rCtrl.vaccineReportDownload()">Download CSV</button>
+	<button class="btn btn-success" style="float: right; margin-bottom: 10px;" ng-click="rCtrl.vaccineReportDownload()">{{ 'Download CSV' | i18next }}</button>
 
 	<table id="vaccineDataTable"
 		   class="table table-striped table-bordered dataTable no-footer table-condensed"
@@ -376,7 +379,7 @@
 				rowspan="3">
 				{{header.title}}
 			</th>
-			<th>Data</th>
+			<th>{{ 'Data' | i18next }}</th>
 			<th ng-repeat="header in rCtrl.current.dataColumns">
 				{{header.title}}
 			</th>
@@ -392,21 +395,21 @@
 			</td>
 
 			<!--Data-->
-			<td>All ages</td>
+			<td>{{ 'All ages' | i18next }}</td>
 			<td ng-repeat="header in rCtrl.current.dataColumns" class="numeric">
 				{{row[header.id].vaccineAll | number : 0}}
 			</td>
 		</tr>
 		<tr>
 			<!--Data-->
-			<td>Target age group</td>
+			<td>{{ 'Target age group' | i18next }}</td>
 			<td ng-repeat="header in rCtrl.current.dataColumns" class="numeric">
 				{{row[header.id].vaccineTarget | number : 0}}
 			</td>
 		</tr>
 		<tr>
 			<!--Data-->
-			<td>Coverage</td>
+			<td>{{ 'Coverage' | i18next }}</td>
 			<td ng-repeat="header in rCtrl.current.dataColumns" class="numeric">
 				{{row[header.id].coverage}}<span ng-if="row[header.id].coverage">%</span>
 			</td>
