--- a/src/report/report.html
+++ b/src/report/report.html
@@ -426,7 +426,7 @@
 
 	<div id="performanceChartTimeSummary" style="height: 400px; margin-bottom: 20px; margin-top: 20px"></div>
 
-	<div id="performanceChartDataSummary" ng-if="(rCtrl.current.orgunits.level.level - rCtrl.current.orgunits.boundary.level) ≥ 2" style="height: 400px; margin-bottom: 20px; margin-top: 20px"></div>
+	<div id="performanceChartDataSummary" ng-if="(rCtrl.current.orgunits.level.level - rCtrl.current.orgunits.boundary.level) >= 2" style="height: 400px; margin-bottom: 20px; margin-top: 20px"></div>
 
 	<table id="perfromanceDataTable"
 		   class="table table-bordered dataTable no-footer table-condensed"
@@ -454,10 +454,10 @@
 				{{row[header.id]}}
 			</td>
 			<td ng-repeat="header in rCtrl.current.dataHeaderData track by $index"
-				ng-class="{success:row[header.id].category === 'A' && row[header.id].coverage ≤ 100 && rCtrl.isPreviousMonth($index),
-					info:row[header.id].category === 'B' && row[header.id].coverage ≤ 100 && rCtrl.isPreviousMonth($index),
-					warning:row[header.id].category === 'C' && row[header.id].dropout ≥ 0 && rCtrl.isPreviousMonth($index),
-					danger:row[header.id].category === 'D' && row[header.id].dropout ≥ 0 && rCtrl.isPreviousMonth($index)}">
+				ng-class="{success:row[header.id].category === 'A' && row[header.id].coverage <= 100 && rCtrl.isPreviousMonth($index),
+					info:row[header.id].category === 'B' && row[header.id].coverage <= 100 && rCtrl.isPreviousMonth($index),
+					warning:row[header.id].category === 'C' && row[header.id].dropout >= 0 && rCtrl.isPreviousMonth($index),
+					danger:row[header.id].category === 'D' && row[header.id].dropout >= 0 && rCtrl.isPreviousMonth($index)}">
 				<table ng-if="row[header.id].category && rCtrl.isPreviousMonth($index)">
 					<tr>
 						<th rowspan=2 style="padding-right: 5px">
