--- a/src/report/report.html
+++ b/src/report/report.html
@@ -258,15 +258,13 @@
 				<h2>{{ 'RIM export configuration' | i18next }}</h2>
 
 				<ul>
-					<li>{{ 'Configuration: used for changing general export parameters (existing parameters will be
-					overwritten)' | i18next }}.</li>
+					<li>{{ 'Configuration: used for changing general export parameters (existing parameters will be overwritten)' | i18next }}.</li>
 					<li>{{ 'Import: used for the initial import of RIM metadata only.' | i18next }}</li>
 				</ul>
 
 				<h3>{{ 'Configuration' | i18next }}</h3>
 				<label>{{ 'Organisation unit levels' | i18next }}</label>
-				<p>{{ 'RIM export is done by district (admin 2) level, and also includes the province (admin 1) level and a
-					country code. Please enter country code and select province, district levels here:' | i18next }}</p>
+				<p>{{ 'RIM export is done by district (admin 2) level, and also includes the province (admin 1) level and a country code. Please enter country code and select province, district levels here:' | i18next }}</p>
 				<div style="width: 400px">
 					<span>{{ 'Country code:' || i18next }}<input style="width: 100px; margin-bottom: 5px;" type="text" ng-model="rCtrl.rim.countryCode"></span>
 					<d2-select placeholder="Select province level..."
@@ -296,9 +294,7 @@
 
 				<h3>{{ 'Import settings' | i18next }}</h3>
 				<p>
-					{{ 'RIM export relies on configuration of a set of DHIS 2 indicators. This page is used for selecting the relevant
-					indicators and importing them into the DHIS 2. Administrators must then configure the indicator formulas
-					to map each indicator to the appropriate data elements.' | i18next }}
+					{{ 'RIM export relies on configuration of a set of DHIS 2 indicators. This page is used for selecting the relevant indicators and importing them into the DHIS 2. Administrators must then configure the indicator formulas to map each indicator to the appropriate data elements.' | i18next }}
 				</p>
 
 				<p>
@@ -306,9 +302,7 @@
 				</p>
 
 				<p>
-					{{ 'A new user group will be imported with the current users as member, and the RIM indicators will be visible
-					only to user in that group. Only users in this group can thus configure the RIM indicators, and export
-					data in RIM format. Additional users can be added to this group in the DHIS 2 user management app.' | i18next }}
+					{{ 'A new user group will be imported with the current users as member, and the RIM indicators will be visible only to user in that group. Only users in this group can thus configure the RIM indicators, and export data in RIM format. Additional users can be added to this group in the DHIS 2 user management app.' | i18next }}
 				</p>
 
 				<br/>
@@ -320,7 +314,7 @@
 				<br />
 
 				<label>{{ 'AEFI' | i18next }}</label>
-				<p>{{ 'Is information on AEFIs <em>by vaccine</em> available?' | i18next }}
+				<p>{{ 'Is information on AEFIs by vaccine available?' | i18next }}
 					<input type="checkbox" ng-model="rCtrl.rim.aefi"></p>
 
 				<br />
