started testing out chartjs

--- a/src/report/report.html
+++ b/src/report/report.html
@@ -417,6 +417,9 @@
 	<div ng-if="rCtrl.current.type === 'perf'"  class="reportContent">
 
 	<div id="performanceChart" style="height: 600px; margin-bottom: 20px"></div>
+	<div style="height: 600px;">
+		<canvas id="performanceChart_chartjs" style="margin-bottom: 20px"></canvas>
+	</div>	
 
 	<div id="performanceChartTimeSummary" style="height: 400px; margin-bottom: 20px; margin-top: 20px"></div>
 
@@ -526,7 +529,9 @@
 
 	<!--MONITORING-->
 	<div ng-if="rCtrl.current.type === 'mon'" class="reportContent">
-	<div id="monitoringChart" style="height: 600px; margin-bottom: 20px"></div>
+	<div style="height: 600px;">
+		<canvas id="monitoringChart" style="margin-bottom: 20px"></canvas>
+	</div>
 </div>
 
 
