Replacing monthly time summary stacked barchart

--- a/src/report/report.html
+++ b/src/report/report.html
@@ -416,11 +416,11 @@
 	<!--PERFORMANCE-->
 	<div ng-if="rCtrl.current.type === 'perf'"  class="reportContent">
 
-	<div id="performanceChart" style="height: 600px; margin-bottom: 20px"></div>
-	
 	<performance-chart performance-chart-data="rCtrl.performanceChartData"></performance-chart>
 
 	<div id="performanceChartTimeSummary" style="height: 400px; margin-bottom: 20px; margin-top: 20px"></div>
+
+	<performance-chart-time-summary performance-chart-time-summary-data="rCtrl.performanceChartTimeSummaryData"></performance-chart-time-summary>
 
 	<div id="performanceChartDataSummary" ng-if="(rCtrl.current.orgunits.level.level - rCtrl.current.orgunits.boundary.level) >= 2" style="height: 400px; margin-bottom: 20px; margin-top: 20px"></div>
 
