--- a/src/appCommons/modalMessage.html
+++ b/src/appCommons/modalMessage.html
@@ -6,7 +6,7 @@
 
 <div class="modal-body">
 	<div ng-if="mmCtrl.info.length === 0" class="spinner">
-		<p><img src="../img/ajax-loader.gif" alt="loading"/>{{ "Loading contact information" || i18next }}</p>
+		<p><img src="../img/ajax-loader.gif" alt="loading"/>{{ "Loading contact information" | i18next }}</p>
 	</div>
 	<div style="clear: both" ng-if="mmCtrl.info.length > 0">
 	
@@ -18,7 +18,7 @@
 		</table>
 		<div ng-if="mmCtrl.message">
 		
-			<label style="float: left;">{{ "Recipients" || i18next }}</label><br/>
+			<label style="float: left;">{{ "Recipients" | i18next }}</label><br/>
 			<d2-select
 					clear="true"
 					ng-model="mmCtrl.selectedRecipient"
@@ -37,7 +37,7 @@
 				  
 			<textarea style="margin-top: 10px; margin-bottom: 10px; width: 100%; height: 100px;" ng-model="mmCtrl.text"></textarea>
 			<div style="clear: both;">
-			<button ng-disabled="!mmCtrl.selectedRecipient || mmCtrl.text === ''" style="float: right; margin-bottom: 10px;" type="button" class="btn btn-success" data-ng-click="mmCtrl.sendMessage()">{{ "Send message" || i18next }}</button>
+			<button ng-disabled="!mmCtrl.selectedRecipient || mmCtrl.text === ''" style="float: right; margin-bottom: 10px;" type="button" class="btn btn-success" data-ng-click="mmCtrl.sendMessage()">{{ "Send message" | i18next }}</button>
 			</div>
 			<div style="clear: both;">
 			<uib-alert ng-repeat="alert in mmCtrl.alerts track by $index" type="{{alert.type}}" close="mmCtrl.alerts.splice($index, 1)">{{alert.msg}}</uib-alert>
@@ -46,6 +46,6 @@
 	</div>
 </div>
 <div class="modal-footer" style="clear: both;">     
-    <button type="button" class="btn btn-default" data-ng-click="mmCtrl.enableMessage()">{{ "Write Message" || i18next }}</button>
-    <button type="button" class="btn btn-default" data-ng-click="mmCtrl.close()">{{ "Done" || i18next }}</button>
+    <button type="button" class="btn btn-default" data-ng-click="mmCtrl.enableMessage()">{{ "Write Message" | i18next }}</button>
+    <button type="button" class="btn btn-default" data-ng-click="mmCtrl.close()">{{ "Done" | i18next }}</button>
 </div>
