--- a/src/appCommons/modalNotification.html
+++ b/src/appCommons/modalNotification.html
@@ -8,5 +8,5 @@
 	<p>{{nCtrl.message}}</p>
 </div>
 <div class="modal-footer" style="clear: both;">
-    <button type="button" class="btn btn-default" data-ng-click="nCtrl.close()">{{ "OK" || i18next }}</button>
+    <button type="button" class="btn btn-default" data-ng-click="nCtrl.close()">{{ "OK" | i18next }}</button>
 </div>
