fixed a translation and removed some old highcharts code

--- a/src/report/report.html
+++ b/src/report/report.html
@@ -83,7 +83,7 @@
 	</div>
 
 	<div class="navItem" style="float:right;">
-		<button ng-disabled="!rCtrl.isReady()" ng-click="rCtrl.makeReport()" class="btn btn-success">{{ 'Make report' || i18next }} </button>
+		<button ng-disabled="!rCtrl.isReady()" ng-click="rCtrl.makeReport()" class="btn btn-success">{{ 'Make report' | i18next }} </button>
 
 	</div>
 
