fix: disable legend on performancechart

--- a/src/report/report.html
+++ b/src/report/report.html
@@ -425,7 +425,7 @@
 	<div ng-if="rCtrl.current.type === 'perf'"  class="reportContent">
 
 	<div style="margin: 40px 0;">
-		<performance-chart data="rCtrl.performanceChartData"></performance-chart>
+		<performance-chart show-legend="false" data="rCtrl.performanceChartData"></performance-chart>
 	</div>
 
 	<div style="margin: 40px 0;">
