fix to RIM import button disappearing

--- a/src/report/report.html
+++ b/src/report/report.html
@@ -254,7 +254,7 @@
 		
 		<uib-tab index="3" heading="RIM configuration" ng-click="rCtrl.rimConfig()">
 
-			<div style="width: 800px">
+			<div style="width: 800px; margin-bottom: 120px">
 				<h2>{{ 'RIM export configuration' | i18next }}</h2>
 
 				<ul>
